--- a/index.html
+++ b/index.html
@@ -22,14 +22,11 @@
             <path fill="#cecccc" d="M250,471.3c-58.28,0-113.26-22.45-154.87-63.21l70.03-70.03c22.9,22.08,53.01,34.23,84.84,34.23s61.94-12.15,84.84-34.23l70.03,70.03c-41.61,40.77-96.59,63.21-154.87,63.21Z"/>
             <path fill="#282828" d="M334.84,338.76l69.32,69.32c-41.48,40.45-96.18,62.72-154.16,62.72s-112.68-22.26-154.16-62.72l69.32-69.32c22.95,21.95,53.04,34.03,84.84,34.03s61.89-12.08,84.84-34.03M334.85,337.36c-21.93,21.31-51.86,34.43-84.85,34.43s-62.92-13.12-84.85-34.43l-70.73,70.73c40.04,39.4,94.97,63.71,155.58,63.71s115.54-24.31,155.58-63.71l-70.73-70.73h0Z"/>
           </g>
-          <g fill="#282828" font-family="MyriadPro-Regular, 'Myriad Pro'" font-size="60.74px" transform="scale(.92 1)">
-              <!-- Adjusted the x-coordinate in each translate() to center the text -->
-              <text transform="translate(158.7 411.28) rotate(27.73)">R</text>
-              <text transform="translate(189.87 427.11) rotate(17.84)">e</text>
-              <text transform="translate(221.21 436.9) rotate(7.64)">n</text>
-              <text transform="translate(256.65 441.07) rotate(-2.27)">a</text>
-              <text transform="translate(289.69 440.19) rotate(-14.96)">m</text>
-              <text transform="translate(339.96 425.02) rotate(-27.53)">e</text>
+          <g>
+            <polygon points="294.54 401.14 294.54 434.8 277.91 434.8 277.91 429.25 289 429.25 289 406.69 277.91 406.69 277.91 401.14 294.54 401.14"/>
+            <polygon points="261.28 401.14 261.28 406.69 211 406.69 211 429.25 261.28 429.25 261.28 434.8 205.46 434.8 205.46 401.14 261.28 401.14"/>
+            <path d="M283.45,384.52v5.54c-3.98.19-8.21,1.24-11.01,4.23l-.1,46.67c.13,1.4,2.84,2.86,4.11,3.42,2.18.96,4.63,1.38,7,1.51v5.54c-5.11.1-9.8-2-13.98-4.69-3.94,2.99-8.8,4.54-13.73,4.69v-5.54c4.15-.21,7.71-1.57,11-4.04v-47.55c-2.74-2.95-7.09-4.01-11-4.23v-5.54c5.28-.12,9.52,2.03,14.03,4.37,4.08-2.79,8.71-4.37,13.69-4.37Z"/>
+            <polygon points="250.2 423.31 216.55 423.31 216.55 412.23 249.6 412.23 250.2 412.82 250.2 423.31"/>
           </g>
         </symbol>
         
@@ -39,13 +36,11 @@
             <path fill="#cecccc" d="M338.06,334.84c22.08-22.9,34.23-53.01,34.23-84.84s-12.15-61.94-34.23-84.84l70.03-70.03c40.77,41.61,63.21,96.59,63.21,154.87s-22.45,113.26-63.21,154.87l-70.03-70.03Z"/>
             <path fill="#282828" d="M408.08,95.84c40.45,41.48,62.72,96.18,62.72,154.16s-22.26,112.68-62.72,154.16l-69.32-69.32c21.95-22.95,34.03-53.04,34.03-84.84s-12.08-61.89-34.03-84.84l69.32-69.32M408.09,94.42l-70.73,70.73c21.31,21.93,34.43,51.86,34.43,84.85s-13.12,62.92-34.43,84.85l70.73,70.73c39.4-40.04,63.71-94.97,63.71-155.58s-24.31-115.54-63.71-155.58h0Z"/>
           </g>
-          <g fill="#282828" font-family="MyriadPro-Regular, 'Myriad Pro'" font-size="70.4px">
-            <text transform="translate(367.28 170.61) rotate(59.79)">R</text>
-            <text transform="translate(385.42 201.05) rotate(74.15)">o</text>
-            <text transform="translate(394.81 236.17) rotate(85.6)">t</text>
-            <text transform="translate(397.13 257.31) rotate(96.12)">a</text>
-            <text transform="translate(393.5 288.64) rotate(106.68)">t</text>
-            <text transform="translate(388.26 308.85) rotate(117.43)">e</text>
+          <g>
+            <path d="M422.32,253.76v-7.52l13.64,13.79-13.64,13.54v-7.17c-6.13-.13-12.26-.92-18.18-2.49-6.21-1.64-14.96-4.92-14.96-12.71v-7c2.54,3.43,5.84,5.11,9.83,6.39,7.3,2.35,15.66,3.13,23.3,3.17Z"/>
+            <path d="M420.96,231.55c6.1.07,12.45.43,18.45,1.53,4.22.77,14.63,3.26,14.37,8.9-.06,1.23-1.68,3.27-2.94,3.22-.3-.01-4.28-2.47-5.3-2.88-7.61-3.11-16.47-3.69-24.59-4.28v5.12l-8.53-8.37,8.53-8.37v5.12Z"/>
+            <path d="M440.09,265.71v-13.15c2.65-1.02,5.64-1.49,8.38-2.55s6.39-2.72,7.68-5.47c.13-.09.68.45.68.51v7.52c0,.54-.79,2.71-1.08,3.37-2.35,5.49-10.33,8.21-15.66,9.79Z"/>
+            <path d="M407.98,232.58v6.49c-5.05.69-9.8,2.24-13.84,5.38-1.68-1.28-2.66-2.56-2.14-4.8.89-3.88,12.37-6.75,15.98-7.07Z"/>
           </g>
         </symbol>
 
@@ -55,39 +50,49 @@
             <path fill="#cecccc" d="M91.91,404.87c-40.77-41.61-63.21-96.59-63.21-154.87s22.44-113.26,63.21-154.87l70.03,70.03c-22.08,22.9-34.23,53.01-34.23,84.84s12.15,61.95,34.23,84.84l-70.03,70.03Z"/>
             <path fill="#282828" d="M91.92,95.84l69.32,69.32c-21.95,22.95-34.03,53.04-34.03,84.84s12.08,61.89,34.03,84.84l-69.32,69.32c-40.45-41.48-62.72-96.18-62.72-154.16s22.26-112.68,62.72-154.16M91.91,94.42c-39.4,40.04-63.71,94.97-63.71,155.58s24.31,115.54,63.71,155.58l70.73-70.73c-21.31-21.93-34.43-51.86-34.43-84.85s13.12-62.92,34.43-84.85l-70.73-70.73h0Z"/>
           </g>
-          <g fill="#282828" font-family="MyriadPro-Regular, 'Myriad Pro'" font-size="70.4px">
-            <text transform="translate(128.14 328.98) rotate(-120.21)">R</text>
-            <text transform="translate(110.16 298.36) rotate(-106.47)">e</text>
-            <text transform="translate(100.96 266.71) rotate(-94.8)">s</text>
-            <text transform="translate(99.05 240.57) rotate(-86.67)">i</text>
-            <text transform="translate(99.27 225.78) rotate(-78.01)">z</text>
-            <text transform="translate(104.4 198.91) rotate(-66)">e</text>
+          <g>
+            <path d="M77.44,237.32l-3.97,3.82c-5.46.29-11.26-.36-16.68,0-.73.05-3.1.28-3.43.67s-.49,1.63-.54,2.2c-.51,6.06-.41,16.31,0,22.44.13,1.88-.05,2.96,2.05,3.14,7.75.69,16.49-.55,24.35,0,.93.03,2.05-.43,2.05-1.5v-19.41s4.09-4.24,4.09-4.24v24.19c0,2.22-3.09,5.04-5.36,5.03-8.2-.47-17.31.74-25.4.04-2.9-.25-4.93-1.94-5.6-4.79.77-8.41-1-18.61,0-26.8.21-1.75,2.78-4.78,4.52-4.78h23.92Z"/>
+            <polygon points="91.65 230.76 91.65 240.6 87.96 237.05 69.24 255.77 72.79 259.46 62.95 259.46 62.95 249.62 66.64 253.17 85.36 234.45 81.81 230.76 91.65 230.76"/>
+            <path d="M105.59,225.3h-3.83c.34-4.03-.53-5.15-4.65-4.65v-4.1h3.96c1.28,0,4.51,3.05,4.51,4.24v4.51Z"/>
+            <path d="M105.59,264.93v4.24c0,1.44-3.09,4.51-4.51,4.51h-3.96v-4.1c4.32.47,4.91-.44,4.65-4.65h3.83Z"/>
+            <path d="M57.48,216.55v4.1c-4.12-.5-4.98.61-4.65,4.65h-3.83v-4.24c0-.26.85-1.85,1.1-2.18,1.76-2.36,4.68-2.49,7.38-2.33Z"/>
+            <rect x="61.04" y="216.55" width="5.47" height="4.1"/>
+            <rect x="70.06" y="216.55" width="5.47" height="4.1"/>
+            <rect x="79.08" y="216.55" width="5.47" height="4.1"/>
+            <rect x="88.1" y="216.55" width="5.47" height="4.1"/>
+            <rect x="88.1" y="269.58" width="5.47" height="4.1"/>
+            <rect x="49.01" y="228.85" width="3.83" height="5.47"/>
+            <rect x="101.77" y="228.85" width="3.83" height="5.47"/>
+            <rect x="101.77" y="237.87" width="3.83" height="5.47"/>
+            <rect x="101.77" y="246.89" width="3.83" height="5.47"/>
+            <rect x="101.77" y="255.91" width="3.83" height="5.47"/>
           </g>
         </symbol>
 
         <!-- Open Icon -->
         <symbol id="icon-open" viewBox="0 0 500 500">
             <g opacity=".5">
-                <path fill="#cecccc" d="M95.13,91.91c41.61-40.77,96.59-63.21,154.87-63.21s113.26,22.44,154.87,63.21l-70.03,70.03c-22.9-22.08-53.01-34.23-84.84-34.23s-61.94,12.15-84.84,34.23l-70.03-70.03Z"/>
-                <path fill="#282828" d="M250,29.2c57.98,0,112.68,22.26,154.16,62.72l-69.32,69.32c-22.95-21.95-53.04-34.03-84.84-34.03s-61.89,12.08-84.84,34.03l-69.32-69.32c41.48-40.45,96.18-62.72,154.16-62.72M250,28.2c-60.61,0-115.54,24.31-155.58,63.71l70.73,70.73c21.93-21.31,51.86-34.43,84.85-34.43s62.92,13.12,84.85,34.43l70.73-70.73c-40.04-39.4-94.97-63.71-155.58-63.71h0Z"/>
+                <path fill="#cecccc" d="M95.13,92.8c41.61-40.77,96.59-63.21,154.87-63.21s113.26,22.44,154.87,63.21l-70.03,70.03c-22.9-22.08-53.01-34.23-84.84-34.23s-61.94,12.15-84.84,34.23l-70.03-70.03Z"/>
+                <path fill="#282828" d="M250,30.09c57.98,0,112.68,22.26,154.16,62.72l-69.32,69.32c-22.95-21.95-53.04-34.03-84.84-34.03s-61.89,12.08-84.84,34.03l-69.32-69.32c41.48-40.45,96.18-62.72,154.16-62.72M250,29.09c-60.61,0-115.54,24.31-155.58,63.71l70.73,70.73c21.93-21.31,51.86-34.43,84.85-34.43s62.92,13.12,84.85,34.43l70.73-70.73c-40.04-39.4-94.97-63.71-155.58-63.71h0Z"/>
             </g>
-            <g fill="#282828" font-family="MyriadPro-Regular, 'Myriad Pro'" font-size="70.4px">
-                <text transform="translate(173.89 125.21) rotate(-22.06)">O</text>
-                <text transform="translate(216.1 108.48) rotate(-6.07)">P</text>
-                <text transform="translate(250.79 104.65) rotate(7.15)">E</text>
-                <text transform="translate(282.59 107.5) rotate(22.23)">N</text>
+            <g>
+                <polygon points="252.24 52.11 223.68 52.11 223.68 102.35 273.92 102.35 273.92 73.79 280.11 79.81 280.11 108.55 217.49 108.55 217.49 45.92 246.22 45.92 252.24 52.11"/>
+                <path d="M280.11,45.92v21.68c-2.82-1.83-5.47-6.19-8.07-7.93-.32-.22-.55-.45-.98-.29l-17.66,17.49c-.3.05-3.87-3.32-4.1-3.76-.14-.27-.23-.42,0-.68l17.36-17.45c.16-.43-.07-.66-.29-.98-1.75-2.6-6.1-5.25-7.93-8.07h21.68Z"/>
             </g>
         </symbol>
 
         <!-- Delete Icon -->
         <symbol id="icon-delete" viewBox="0 0 500 500">
           <g opacity=".5">
-            <path fill="#d30f00" d="M250,367.36c-64.71,0-117.36-52.65-117.36-117.36s52.65-117.36,117.36-117.36,117.36,52.65,117.36,117.36-52.65,117.36-117.36,117.36Z"/>
-            <path fill="#282828" d="M250,133.14c31.21,0,60.56,12.16,82.63,34.23,22.07,22.07,34.23,51.42,34.23,82.63s-12.16,60.56-34.23,82.63-51.42,34.23-82.63,34.23-60.56-12.16-82.63-34.23c-22.07-22.07-34.23-51.42-34.23-82.63s12.16-60.56,34.23-82.63c22.07-22.07,51.42-34.23,82.63-34.23M250,132.14c-65.09,0-117.86,52.77-117.86,117.86s52.77,117.86,117.86,117.86,117.86-52.77,117.86-117.86-52.77-117.86-117.86-117.86h0Z"/>
+            <path fill="#d30f00" d="M250,362.04c-61.78,0-112.04-50.26-112.04-112.04s50.26-112.04,112.04-112.04,112.04,50.26,112.04,112.04-50.26,112.04-112.04,112.04Z"/>
+            <path fill="#282828" d="M250,138.46c29.79,0,57.8,11.6,78.87,32.67,21.07,21.07,32.67,49.08,32.67,78.87s-11.6,57.8-32.67,78.87c-21.07,21.07-49.08,32.67-78.87,32.67s-57.8-11.6-78.87-32.67c-21.07-21.07-32.67-49.08-32.67-78.87s11.6-57.8,32.67-78.87c21.07-21.07,49.08-32.67,78.87-32.67M250,137.46c-62.15,0-112.54,50.39-112.54,112.54s50.39,112.54,112.54,112.54,112.54-50.39,112.54-112.54-50.39-112.54-112.54-112.54h0Z"/>
           </g>
-          <text fill="#fff" font-family="MyriadPro-Regular, 'Myriad Pro'" font-size="63.11px" transform="translate(151.33 268.52)">
-              <tspan x="0" y="0">DEL</tspan><tspan letter-spacing=".02em" x="102.86" y="0">E</tspan><tspan letter-spacing="0em" x="134.92" y="0">TE</tspan>
-          </text>
+          <g>
+            <path d="M265.46,203.86c2.99.02,7.54,4.05,7.54,7v4.54h9.77c2.46,0,5.63,2.54,6.72,4.66,1.18,2.31,1.09,7.39.9,10.03s-2.13,4.79-4.74,5.41c-.42.1-1.05-.14-1.11.42v49.99c-.52,5.5-5.04,9.81-10.54,10.22h-47.68c-6.63-.4-11.11-5.66-11-12.22v-48.37c-2.77.18-5.42-2.47-5.68-5.15-.24-2.37-.22-7.94.74-10.02,1.04-2.27,4.3-4.97,6.87-4.97h9.61c-.12-3.62.15-6.86,2.99-9.39,1.14-1.01,3.02-1.97,4.54-2.15h31.07ZM267.3,215.39v-3.46c0-.65-1.22-2.13-1.99-2.16l-30.23-.07c-.94-.08-2.38,1.38-2.38,2.23v3.46h34.6ZM284.53,229.85v-6.69c0-.54-1.22-1.77-1.84-1.85l-64.98-.08c-.4.05-1.08.36-1.38.62-.19.16-.84,1.18-.84,1.31v6.69h69.05ZM278.84,235.54h-57.67v49.9c0,1.97,2.82,4.78,4.85,4.84h47.68c2.14.16,5.15-2.82,5.15-4.84v-49.9Z"/>
+            <path d="M246.35,241.42c.97-.18,6.53-.18,7.43.03.99.23,1.84,1.34,1.98,2.33v38.28c-.13,1.3-1.07,2.34-2.38,2.52-1.19.16-5.88.17-6.99-.05s-1.93-1.19-2.13-2.33v-38.28c.09-1.1.99-2.3,2.1-2.5ZM252.85,244.31h-5.69v37.37h5.69v-37.37Z"/>
+            <path d="M263.73,241.42c1.15-.2,6.01-.2,7.15,0,1.05.18,1.84,1.06,2.1,2.05v38.9c-.21,1.18-1.2,2.07-2.39,2.21-1.51.18-4.75.15-6.29.02-1.32-.11-2.17-.73-2.65-1.97-.45-12.61-.06-25.31-.2-37.95.06-1.45.68-2.99,2.27-3.26ZM270.23,244.31h-5.84v37.37h5.84v-37.37Z"/>
+            <path d="M229.12,241.42c1.15-.2,6.01-.2,7.15,0,1.05.18,1.84,1.06,2.1,2.05v38.9c-.21,1.18-1.2,2.07-2.39,2.21-1.41.17-5.48.18-6.83-.05-1.83-.32-2.21-1.95-2.31-3.54-.74-11.82.57-24.41,0-36.31.06-1.45.68-2.99,2.27-3.26ZM235.62,244.31h-5.84v37.37h5.84v-37.37Z"/>
+          </g>
         </symbol>
 
         <!-- Background Icon -->
@@ -621,5 +626,4 @@
     
 </body>
 </html>
-
 
