--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       <defs>
         <!-- Rename Icon -->
         <symbol id="icon-rename" viewBox="0 0 500 500">
+          <g opacity=".5">
+            <path fill="#cecccc" d="M250,471.3c-58.28,0-113.26-22.45-154.87-63.21l70.03-70.03c22.9,22.08,53.01,34.23,84.84,34.23s61.94-12.15,84.84-34.23l70.03,70.03c-41.61,40.77-96.59,63.21-154.87,63.21Z"/>
+          </g>
           <g>
             <polygon points="294.54 401.14 294.54 434.8 277.91 434.8 277.91 429.25 289 429.25 289 406.69 277.91 406.69 277.91 401.14 294.54 401.14"/>
             <polygon points="261.28 401.14 261.28 406.69 211 406.69 211 429.25 261.28 429.25 261.28 434.8 205.46 434.8 205.46 401.14 261.28 401.14"/>
@@ -28,6 +31,9 @@
         
         <!-- Rotate Icon -->
         <symbol id="icon-rotate" viewBox="0 0 500 500">
+          <g opacity=".5">
+            <path fill="#cecccc" d="M338.06,334.84c22.08-22.9,34.23-53.01,34.23-84.84s-12.15-61.94-34.23-84.84l70.03-70.03c40.77,41.61,63.21,96.59,63.21,154.87s-22.45,113.26-63.21,154.87l-70.03-70.03Z"/>
+          </g>
           <g>
             <path d="M422.32,253.76v-7.52l13.64,13.79-13.64,13.54v-7.17c-6.13-.13-12.26-.92-18.18-2.49-6.21-1.64-14.96-4.92-14.96-12.71v-7c2.54,3.43,5.84,5.11,9.83,6.39,7.3,2.35,15.66,3.13,23.3,3.17Z"/>
             <path d="M420.96,231.55c6.1.07,12.45.43,18.45,1.53,4.22.77,14.63,3.26,14.37,8.9-.06,1.23-1.68,3.27-2.94,3.22-.3-.01-4.28-2.47-5.3-2.88-7.61-3.11-16.47-3.69-24.59-4.28v5.12l-8.53-8.37,8.53-8.37v5.12Z"/>
@@ -38,6 +44,9 @@
 
         <!-- Resize Icon -->
         <symbol id="icon-resize" viewBox="0 0 500 500">
+          <g opacity=".5">
+            <path fill="#cecccc" d="M91.91,404.87c-40.77-41.61-63.21-96.59-63.21-154.87s22.44-113.26,63.21-154.87l70.03,70.03c-22.08,22.9-34.23,53.01-34.23,84.84s12.15,61.95,34.23,84.84l-70.03,70.03Z"/>
+          </g>
           <g>
             <path d="M77.44,237.32l-3.97,3.82c-5.46.29-11.26-.36-16.68,0-.73.05-3.1.28-3.43.67s-.49,1.63-.54,2.2c-.51,6.06-.41,16.31,0,22.44.13,1.88-.05,2.96,2.05,3.14,7.75.69,16.49-.55,24.35,0,.93.03,2.05-.43,2.05-1.5v-19.41s4.09-4.24,4.09-4.24v24.19c0,2.22-3.09,5.04-5.36,5.03-8.2-.47-17.31.74-25.4.04-2.9-.25-4.93-1.94-5.6-4.79.77-8.41-1-18.61,0-26.8.21-1.75,2.78-4.78,4.52-4.78h23.92Z"/>
             <polygon points="91.65 230.76 91.65 240.6 87.96 237.05 69.24 255.77 72.79 259.46 62.95 259.46 62.95 249.62 66.64 253.17 85.36 234.45 81.81 230.76 91.65 230.76"/>
@@ -59,6 +68,9 @@
 
         <!-- Open Icon -->
         <symbol id="icon-open" viewBox="0 0 500 500">
+            <g opacity=".5">
+                <path fill="#cecccc" d="M95.13,92.8c41.61-40.77,96.59-63.21,154.87-63.21s113.26,22.44,154.87,63.21l-70.03,70.03c-22.9-22.08-53.01-34.23-84.84-34.23s-61.94,12.15-84.84,34.23l-70.03-70.03Z"/>
+            </g>
             <g>
                 <polygon points="252.24 52.11 223.68 52.11 223.68 102.35 273.92 102.35 273.92 73.79 280.11 79.81 280.11 108.55 217.49 108.55 217.49 45.92 246.22 45.92 252.24 52.11"/>
                 <path d="M280.11,45.92v21.68c-2.82-1.83-5.47-6.19-8.07-7.93-.32-.22-.55-.45-.98-.29l-17.66,17.49c-.3.05-3.87-3.32-4.1-3.76-.14-.27-.23-.42,0-.68l17.36-17.45c.16-.43-.07-.66-.29-.98-1.75-2.6-6.1-5.25-7.93-8.07h21.68Z"/>
@@ -610,3 +622,4 @@
     
 </body>
 </html>
+
