--- a/index.html
+++ b/index.html
@@ -629,11 +629,12 @@
         </div>
     </div>
 
-    <script src="JS/script.js"></script>
-    <script src="JS/visual_inventory_logic.js"></script>
+    <!-- The old script tags are replaced with a single module entry point -->
+    <script type="module" src="JS/main.js"></script>
+    
+    <!-- These external scripts remain, but their onload callbacks are now handled by main.js -->
     <script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
     <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
     
 </body>
 </html>
-
