--- a/index.html
+++ b/index.html
@@ -300,8 +300,19 @@
             </div>
 
             <div id="employees-panel" class="hidden">
-                <div class="flex justify-between items-center mb-6">
-                    <h2 class="text-2xl font-bold">Employee Directory</h2>
+                <div class="flex flex-wrap justify-between items-center mb-6 gap-4">
+                    <div class="flex gap-4 items-end">
+                        <div>
+                            <label for="employee-search" class="block text-sm font-medium text-gray-700">Search Employees</label>
+                            <input type="text" id="employee-search" placeholder="Search by name..." class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50">
+                        </div>
+                        <div>
+                            <label for="employee-department-filter" class="block text-sm font-medium text-gray-700">Department</label>
+                            <select id="employee-department-filter" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50">
+                                <option value="">All Departments</option>
+                            </select>
+                        </div>
+                    </div>
                     <button id="add-employee-btn" class="bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg shadow-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2">
                         Add New Employee
                     </button>
@@ -424,7 +435,7 @@
                     <div>
                         <label for="assigned-to" class="block text-sm font-medium text-gray-700">Assignment (Employee)</label>
                         <select id="assigned-to" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50"></select>
-                        <input type="text" id="assigned-to-new" class="mt-2 hidden w-full rounded-md border-gray-300 shadow-sm" placeholder="Enter new employee...">
+                        <input type="text" id="assigned-to-new" class="mt-2 hidden w-full rounded-md border-gray-300 shadow-sm" placeholder="Add employees from the Employees tab">
                     </div>
                     <div>
                         <label for="date-issued" class="block text-sm font-medium text-gray-700">Date Issued</label>
@@ -633,6 +644,7 @@
             <form id="employee-form" class="p-8">
                 <h2 id="employee-modal-title" class="text-2xl font-bold mb-6">Add New Employee</h2>
                 <input type="hidden" id="employee-id">
+                <input type="hidden" id="employee-row-index">
                 <div class="space-y-4">
                     <div>
                         <label for="employee-name" class="block text-sm font-medium text-gray-700">Full Name</label>
@@ -682,6 +694,7 @@
                     </div>
                 </div>
                 <div class="flex justify-end gap-4 mt-8">
+                    <button type="button" id="employee-detail-edit-btn" class="bg-indigo-600 text-white font-semibold py-2 px-4 rounded-lg shadow-md hover:bg-indigo-700">Edit</button>
                     <button type="button" id="employee-detail-close-btn" class="bg-gray-200 text-gray-800 font-semibold py-2 px-4 rounded-lg hover:bg-gray-300">Close</button>
                 </div>
             </div>
@@ -693,3 +706,4 @@
     
 </body>
 </html>
+
