Unified Search Functionality

--- a/index.html
+++ b/index.html
@@ -347,6 +347,9 @@
                                 <div class="toolbar-item bg-white border" draggable="true" data-asset-type="Door" data-name="Door" data-width="1" data-height="1">Door</div>
                             </div>
                             <h3 class="font-bold mb-4 mt-6">Assets</h3>
+                            <div class="mb-2">
+                                <input type="text" id="unplaced-asset-search" placeholder="Search assets..." class="block w-full rounded-md border-gray-300 shadow-sm text-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50">
+                            </div>
                             <div id="unplaced-assets-list" class="space-y-2 max-h-96 overflow-y-auto">
                                 <p class="text-xs text-gray-500">Drag assets from here to the grid.</p>
                             </div>
