--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
                         <p class="text-xl">No assets found.</p>
                         <p>Click "Add New Asset" to get started.</p>
                     </div>
+                    <div id="pagination-controls" class="flex justify-center items-center mt-6"></div>
                 </div>
             </div>
 
@@ -709,4 +710,3 @@
     
 </body>
 </html>
-
