--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
                             </button>
                         </div>
                     </div>
+                    <div id="pagination-controls-top" class="mt-4 pt-4 border-t border-gray-200"></div>
                 </div>
 
                 <div class="bg-white p-6 rounded-lg shadow-md overflow-x-auto">
@@ -249,8 +250,8 @@
                         <p class="text-xl">No assets found.</p>
                         <p>Click "Add New Asset" to get started.</p>
                     </div>
-                    <div id="pagination-controls" class="flex justify-center items-center mt-6"></div>
                 </div>
+                <div id="pagination-controls-bottom" class="flex justify-center items-center mt-6"></div>
             </div>
 
             <div id="overview-panel" class="hidden">
@@ -710,3 +711,4 @@
     
 </body>
 </html>
+
