--- a/index.html
+++ b/index.html
@@ -265,7 +265,9 @@
                                 <option value="line">Line</option>
                             </select>
                         </div>
-                        <canvas id="site-chart"></canvas>
+                        <div class="chart-container">
+                            <canvas id="site-chart"></canvas>
+                        </div>
                     </div>
                     <div class="bg-white p-6 rounded-lg shadow-md">
                         <div class="flex justify-between items-center mb-4">
@@ -275,7 +277,9 @@
                                 <option value="bar">Bar</option>
                             </select>
                         </div>
-                        <canvas id="condition-chart"></canvas>
+                        <div class="chart-container">
+                            <canvas id="condition-chart"></canvas>
+                        </div>
                     </div>
                     <div class="bg-white p-6 rounded-lg shadow-md">
                         <div class="flex justify-between items-center mb-4">
@@ -285,7 +289,9 @@
                                 <option value="doughnut">Doughnut</option>
                             </select>
                         </div>
-                        <canvas id="employee-chart"></canvas>
+                        <div class="chart-container">
+                            <canvas id="employee-chart"></canvas>
+                        </div>
                     </div>
                     <div class="bg-white p-6 rounded-lg shadow-md">
                         <div class="flex justify-between items-center mb-4">
@@ -296,7 +302,9 @@
                                 <option value="doughnut">Doughnut</option>
                             </select>
                         </div>
-                        <canvas id="type-chart"></canvas>
+                        <div class="chart-container">
+                            <canvas id="type-chart"></canvas>
+                        </div>
                     </div>
                  </div>
             </div>
@@ -706,10 +714,7 @@
         </div>
     </div>
     
-    <!-- A single module entry point which will load other scripts dynamically -->
     <script type="module" src="JS/main.js"></script>
     
 </body>
 </html>
-
-
